# eeg-viewer-app

./: README.md
data/: 30_01_c1_pent.csv  30_01_c2_pent.csv  30_01_c3_pent.csv
src/: .env.dev  config.yml  main.py  pyproject.toml
